@@ -82,11 +82,10 @@ public class JcrParser {
         }
 
         // Extract arguments
-        LinkedList args = this.getArguments(input);
+        List<String> args = this.getArguments(input);
 
         // The first arg is the command name
-        String cmdName = (String) args.getFirst();
-        args.removeFirst();
+        String cmdName = args.remove(0);
 
         // Get the command line descriptor
         cl = CommandLineFactory.getInstance().getCommandLine(cmdName);
@@ -116,15 +115,15 @@ public class JcrParser {
      *        the user's input
      * @return a <code>List</code> containing the arguments
      */
-    private LinkedList getArguments(String input) {
-        LinkedList args = new LinkedList();
+    private List<String> getArguments(String input) {
+        List<String> args = new LinkedList<String>();
         int length = input.length();
 
         boolean insideSingleQuote = false;
         boolean insideDoubleQuote = false;
         int escape = -1;
 
-        StringBuffer arg = new StringBuffer();
+        StringBuilder arg = new StringBuilder();
 
         for (int i = 0; i < length; ++i) {
             char c = input.charAt(i);
@@ -132,9 +131,10 @@ public class JcrParser {
             // end of argument?
             if ((!insideSingleQuote && !insideDoubleQuote && Character
                 .isWhitespace(c))) {
-                if (arg.toString().trim().length() > 0) {
-                    args.add(arg.toString().trim());
-                    arg = new StringBuffer();
+                final String trimmedArg = arg.toString().trim();
+                if (trimmedArg.length() > 0) {
+                    args.add(trimmedArg);
+                    arg.setLength(0);
                 }
                 continue;
             }
@@ -159,8 +159,9 @@ public class JcrParser {
             }
         }
 
-        if (arg.toString().trim().length() > 0) {
-            args.add(arg.toString());
+        final String trimmedArg = arg.toString().trim();
+        if (trimmedArg.length() > 0) {
+            args.add(trimmedArg);
         }
 
         return args;
@@ -214,10 +215,9 @@ public class JcrParser {
      * @throws JcrParserException
      *         if the user's input is illegal
      */
-    private void populate(CommandLine cl, List valList)
+    private void populate(CommandLine cl, List<String> valList)
             throws JcrParserException {
-        String[] values = (String[]) valList
-            .toArray(new String[valList.size()]);
+        String[] values = valList.toArray(new String[valList.size()]);
 
         // Command Line parameters
         Map options = cl.getOptions();
@@ -225,7 +225,7 @@ public class JcrParser {
         Map clArgs = cl.getArguments();
 
         // Input arguments
-        List args = new ArrayList();
+        List<String> args = new ArrayList<String>();
 
         for (int i = 0; i < values.length; i++) {
             String value = values[i];
@@ -260,9 +260,9 @@ public class JcrParser {
         }
 
         // set arguments
-        String[] argValues = (String[]) args.toArray(new String[args.size()]);
+        String[] argValues = args.toArray(new String[args.size()]);
         for (int j = 0; j < argValues.length; j++) {
-            Argument arg = (Argument) clArgs.get(new Integer(j));
+            Argument arg = (Argument) clArgs.get(j);
             if (arg == null) {
                 throw new JcrParserException("exception.more.arguments.than.expected");
             }
